# Smart-Farm

./: README.md
device-tree/: am335x-boneblack.dts
display/: mainwindow.h
display/QT5_SmartFarm/: CMakeLists.txt  gpio.cpp  gpio.h  light_sensor.cpp  light_sensor.h  main.cpp  mainwindow.cpp  mainwindow.ui  temperature_humidity_sensor.cpp  temperature_humidity_sensor.h
sensors/: bh1750.c  sht30.c
yocto/: bblayers.conf  local.conf
